2012-02-03 11:43-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Conditionally compile out code if
	the supporting library is not available.

2012-02-03 09:15-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Tests/base/NSXMLNode/basic.m: Correct test for
	text node.

2012-02-02 22:57-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLDocument.m: Remove commented out code
	from old implementation.
	* Source/NSXMLNode.m: Flesh out functions started by
	doug to test equality for nodes.
	* Source/NSXMLPrivate.h: Remove uneeded ivars.
	* Tests/base/NSXMLNode/basic.m: Add tests to for equality.

2012-02-01 11:32-EST Gregory John Casamento <greg.casamento@gmail.com>

	* Source/NSXMLNode.m: Eliminate warning message which was
	inadvertantly merged.

2012-02-01 11:18-EST Gregory John Casamento <greg.casamento@gmail.com>

	* base.make.in
	* ChangeLog
	* config/pathtls.m4
	* config/pathxml.m4
	* configure
	* configure.ac
	* Documentation/ReleaseNotes.gsdoc
	* Headers/Foundation/NSCalendar.h
	* Headers/Foundation/NSDate.h
	* Headers/Foundation/NSException.h
	* Headers/Foundation/NSNetServices.h
	* Headers/Foundation/NSString.h
	* Headers/Foundation/NSXMLNode.h
	* Headers/GNUstepBase/config.h.in
	* NSTimeZones/NSTimeZones.tar
	* Source/GSFFIInvocation.m
	* Source/GSPrivate.h
	* Source/GSSocketStream.m
	* Source/GSString.m
	* Source/NSAffineTransform.m
	* Source/NSBundle.m
	* Source/NSConnection.m
	* Source/NSFileManager.m
	* Source/NSHost.m
	* Source/NSInvocation.m
	* Source/NSJSONSerialization.m
	* Source/NSKeyValueCoding.m
	* Source/NSNotificationCenter.m
	* Source/NSNumberFormatter.m
	* Source/NSURLRequest.m
	* Source/NSUserDefaults.m
	* Source/NSXMLNode.m: Corrected infinite loop.  Return an
	NSXMLNode for NSXMLInvalidKind per Cocoa documentation.
	* Tests/base/NSJSONSerialization/json.m
	* Tests/base/NSObject/initialize.m
	* Tests/base/NSString/NSString_tests.h
	* Tests/base/NSURLRequest/basic.m